# zfirot

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  Makefile  README.md  clippy.toml  skills-lock.json
.agents/skills/tdd/: SKILL.md
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/instructions/: architecture.instructions.md  data-auth-classification.instructions.md  error-handling.instructions.md  git-workflow.instructions.md  testing.instructions.md  ui.instructions.md
.github/workflows/: ci.yml  pr-body-check.yml
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/tests/: board_cache.rs
crates/domain/: Cargo.toml
crates/domain/src/: agent.rs  classification.rs  error.rs  freshness.rs  home_filter.rs  lane.rs  lib.rs  pr.rs  prd.rs  project.rs  prose.rs  repo.rs  slice.rs  summary.rs  theme.rs  token.rs  view_mode.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: board_cache.rs  github.rs  lib.rs  project_store.rs  secure_store.rs
crates/infrastructure/tests/: assign_agent.rs  assign_self.rs  auth.rs  board_cache_store.rs  board_snapshot_refresh.rs  classify_board.rs  confirm_classification.rs  env_store.rs  load_board.rs  map_response.rs  parse_issues.rs  parse_projects.rs  projects.rs  suggested_agents.rs  track_repos.rs
crates/infrastructure/tests/fixtures/: board.json  issues.json  projects.json
crates/presentation/: Cargo.toml  Dioxus.toml  package-lock.json  package.json  tailwind.css
crates/presentation/assets/: round-icon-corners.py  tailwind.css
crates/presentation/src/: app.rs  main.rs  state.rs
crates/presentation/src/components/: board_column.rs  card.rs  dependency_badge.rs  error_banner.rs  home_screen.rs  mod.rs  other_issue_card.rs  prd_lane.rs  slice_card.rs  spinner.rs  summary_bar.rs  token_screen.rs
docs/: logo-preview.html
docs/adr/: 0001-read-directly-from-github-no-backend.md  0002-aggregates-as-state-commands-replay-deferred.md  0003-agents-provider-neutral-live-discovered.md  0004-pr-substatus-spine-and-decorations.md
docs/specs/: 0001-incremental-board-refresh.md
docs/spikes/: 0001-delegate-mutation-decision.md
