[workspace]
resolver = "2"
members = [
  "crates/domain",
  "crates/application",
  "crates/infrastructure",
  "crates/presentation",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt"] }

domain = { path = "crates/domain" }
application = { path = "crates/application" }
infrastructure = { path = "crates/infrastructure" }
