[workspace]
resolver = "2"
members = [
  "crates/domain",
  "crates/application",
  "crates/infrastructure",
  "crates/presentation",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
dirs = "6"
tokio = { version = "1", features = ["macros", "rt"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }

domain = { path = "crates/domain" }
application = { path = "crates/application" }
infrastructure = { path = "crates/infrastructure" }
