[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domain.workspace = true
application.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio.workspace = true
