[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domain.workspace = true
application.workspace = true
async-trait.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

[dev-dependencies]
tokio.workspace = true
