[package]
name = "zfirot"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "zfirot"
path = "src/main.rs"

[dependencies]
domain.workspace = true
application.workspace = true
infrastructure.workspace = true
dioxus = { version = "0.7", features = ["desktop"] }
# Used by the board's background-poll timer. Its time driver is desktop/native
# only (no `wasm32`), so revisit this when gating server/web/desktop — see the
# poll loop in src/app.rs.
tokio = { workspace = true, features = ["time"] }
chrono = "0.4"
